# mfg-ml-examples

./: .gitignore  .pre-commit-config.yaml  CHANGELOG.md  CODEOWNERS  README.md  manifest.lkml  pyproject.toml
.github/: PULL_REQUEST_TEMPLATE.md
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
docs/: deployment.md  development.md
looker/: README.md
looker/models/: mde-ml.model.lkml
looker/views/: persistence.view.lkml
mce/: README.md  configure_mce.sh
mce/connectors/: cncmilling.json
mce/flows/: flow-data-generation.json
mde/: README.md  configure_mde.sh  mdeutil.py
mde/buckets/: cncmill.json
mde/ingestions/: predictions.json
mde/metadata_instances/: cncmilling_z1_commandacceleration.json  cncmilling_z1_velocitydiff.json  tool_wear_predictions.json
mde/parsers/: tool_wear_predictions_pipeline.json
mde/payloads/: tool_wear_predictions.json
mde/schema_to_buckets/: asset_to_cncmill.json  cncmill_to_cncmill.json  organization_to_cncmill.json
mde/schemas/: asset.json  cncmill.json  organization.json
mde/tags/: cncmilling_clamp_pressure.json  cncmilling_feedrate.json  cncmilling_m1_current_feedrate.json  cncmilling_m1_current_program_number.json  cncmilling_m1_sequence_number.json  cncmilling_machining_process.json  cncmilling_material.json  cncmilling_no.json  cncmilling_s1_accelerationdiff.json  cncmilling_s1_actualacceleration.json  cncmilling_s1_actualposition.json  (+56 more)
notebooks/: 10_merge.ipynb  1_tool_wear_train.ipynb  2_tool_wear_batch_predict.ipynb  9_extra.ipynb
tools/: .env.example  deploy.sh  utils.sh
(+26 files in other folders)
